Fixed pathing to background image and alignment of missing pictures

--- a/Anton_Desyatov/styles.css
+++ b/Anton_Desyatov/styles.css
@@ -4,37 +4,71 @@ html,body{
 }
 
 .backgroundContainer{
-    background: url("../images/forest.png");
+    background: url("images/forest.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width:100%;
     height:100%;
+    min-width: 395px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.widgetWindow{
-    background: url("../images/backgroundBlack.png");
-    background-position: center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: grid;
-    grid-template-columns: repeat(3,205px );
-    grid-template-rows: repeat(2, 205px);
-    width:  615px;
+.widgetWindow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    min-width: 615px;
+    width:615px;
     height: 410px;
     font-family: Verdana;
     font-weight: bold;
     color: white;
-    padding: 95px;
 }
 
 .square{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     max-height: 205px;
     max-width: 205px;
+    min-height:205px;
+    min-width:205px;
+}
+
+.weeklyImageContainer{
+    min-height:105px;
+    min-width:205px;
+    height:105px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tableContainer{
+    background-color: #b23254;
+    width: 205px;
+    max-width:205px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height:100px;
+    max-height:100px;
+    font-size: 12px;
+}
+
+.weeklyForecast{
+    max-width: 205px;
+    max-height: 100px;
+}
+
+.tableImageContainer{
+    text-align:center;
+    padding: 7px;
 }
 
 .aqua{
@@ -73,26 +107,10 @@ html,body{
 .cityName{
     width: 205px;
     height: 12px;
-    display: grid;
+    display: flex;
     justify-content: center;
     margin:0;
     padding-bottom: 45px;
-}
-
-.weeklyImageContainer{
-    height:105px;
-    width:205px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.weeklyForecast{
-    background-color: #b23254;
-    width: 205px;
-    height:95px;
-    font-size: 12px;
-    padding: 14px;
 }
 
 .tableImageContainer{
